syntax = "proto2";

message Neighbourhood {
    required int32 start = 1;
    repeated int32 nodes = 2;
    repeated int32 edge_index_source = 3;
    repeated int32 edge_index_target = 4;
    optional EdgeTypes edge_types = 5; 

    message EdgeType {
        required bool seen = 1;
        required bool like = 2;
        required bool reply = 3;
        required bool retweet = 4;
        required bool retweet_comment = 5;
    }

    message EdgeTypes {
        repeated EdgeType attributes = 1;
    }
}

message Batch {
    repeated Neighbourhood elements = 1;
}